# FMFI_rocnikovy_projekt

./: CMakeLists.txt  ColoringSAT.cpp  ColoringSAT.h  Graph.cpp  Graph.h  Matrix.cpp  Matrix.h  README.md  main.cpp  runner.py
data/: 4_edge_critical_snarks.20.g6  4_edge_critical_snarks.22.g6  4_edge_critical_snarks.26.g6  4_edge_critical_snarks.28.g6  4_edge_critical_snarks.32.g6  4_edge_critical_snarks.34.g6  4_vertex_critical_snarks.30.g6  4_vertex_critical_snarks.32.g6  4_vertex_critical_snarks.34.g6  4_vertex_critical_snarks.36.g6
export_data/OC_4_edge_critical_snarks.10/: 4_edge_critical_snarks.10.1_1.csv
export_data/bulk/: 4_edge_critical_snarks.20.1_1.csv  4_edge_critical_snarks.22.2_2.csv
export_data/bulk/4_edge_critical_snarks.10/: 4_edge_critical_snarks.10.1_1.csv
export_data/bulk/4_edge_critical_snarks.18/: 4_edge_critical_snarks.18.1_2.csv  4_edge_critical_snarks.18.2_2.csv
export_data/bulk/4_edge_critical_snarks.22/: 4_edge_critical_snarks.22.1_2.csv
export_data/bulk/4_edge_critical_snarks.26/: 4_edge_critical_snarks.26.100_111.csv  4_edge_critical_snarks.26.101_111.csv  4_edge_critical_snarks.26.102_111.csv  4_edge_critical_snarks.26.103_111.csv  4_edge_critical_snarks.26.104_111.csv  4_edge_critical_snarks.26.105_111.csv  4_edge_critical_snarks.26.106_111.csv  4_edge_critical_snarks.26.107_111.csv  4_edge_critical_snarks.26.108_111.csv  4_edge_critical_snarks.26.109_111.csv  4_edge_critical_snarks.26.10_111.csv  4_edge_critical_snarks.26.110_111.csv  4_edge_critical_snarks.26.111_111.csv  4_edge_critical_snarks.26.11_111.csv  4_edge_critical_snarks.26.12_111.csv  4_edge_critical_snarks.26.13_111.csv  4_edge_critical_snarks.26.14_111.csv  4_edge_critical_snarks.26.15_111.csv  4_edge_critical_snarks.26.16_111.csv  4_edge_critical_snarks.26.17_111.csv  4_edge_critical_snarks.26.18_111.csv  4_edge_critical_snarks.26.19_111.csv  4_edge_critical_snarks.26.1_111.csv  4_edge_critical_snarks.26.20_111.csv  4_edge_critical_snarks.26.21_111.csv  4_edge_critical_snarks.26.22_111.csv  4_edge_critical_snarks.26.23_111.csv  4_edge_critical_snarks.26.24_111.csv  4_edge_critical_snarks.26.25_111.csv  4_edge_critical_snarks.26.26_111.csv  4_edge_critical_snarks.26.27_111.csv  4_edge_critical_snarks.26.28_111.csv  4_edge_critical_snarks.26.29_111.csv  4_edge_critical_snarks.26.2_111.csv  4_edge_critical_snarks.26.30_111.csv  4_edge_critical_snarks.26.31_111.csv  4_edge_critical_snarks.26.32_111.csv  4_edge_critical_snarks.26.33_111.csv  4_edge_critical_snarks.26.34_111.csv  4_edge_critical_snarks.26.35_111.csv  (+71 more)
export_data/bulk/4_edge_critical_snarks.28/: 4_edge_critical_snarks.28.10_33.csv  4_edge_critical_snarks.28.11_33.csv  4_edge_critical_snarks.28.12_33.csv  4_edge_critical_snarks.28.13_33.csv  4_edge_critical_snarks.28.14_33.csv  4_edge_critical_snarks.28.15_33.csv  4_edge_critical_snarks.28.16_33.csv  4_edge_critical_snarks.28.17_33.csv  4_edge_critical_snarks.28.18_33.csv  4_edge_critical_snarks.28.19_33.csv  4_edge_critical_snarks.28.1_33.csv  4_edge_critical_snarks.28.20_33.csv  4_edge_critical_snarks.28.21_33.csv  4_edge_critical_snarks.28.22_33.csv  4_edge_critical_snarks.28.23_33.csv  4_edge_critical_snarks.28.24_33.csv  4_edge_critical_snarks.28.25_33.csv  4_edge_critical_snarks.28.26_33.csv  4_edge_critical_snarks.28.27_33.csv  4_edge_critical_snarks.28.28_33.csv  4_edge_critical_snarks.28.29_33.csv  4_edge_critical_snarks.28.2_33.csv  4_edge_critical_snarks.28.30_33.csv  4_edge_critical_snarks.28.31_33.csv  4_edge_critical_snarks.28.32_33.csv  4_edge_critical_snarks.28.33_33.csv  4_edge_critical_snarks.28.3_33.csv  4_edge_critical_snarks.28.4_33.csv  4_edge_critical_snarks.28.5_33.csv  4_edge_critical_snarks.28.6_33.csv  4_edge_critical_snarks.28.7_33.csv  4_edge_critical_snarks.28.8_33.csv  4_edge_critical_snarks.28.9_33.csv
export_data/bulk/4_edge_critical_snarks.30/: 4_edge_critical_snarks.30.10_115.csv  4_edge_critical_snarks.30.11_115.csv  4_edge_critical_snarks.30.12_115.csv  4_edge_critical_snarks.30.13_115.csv  4_edge_critical_snarks.30.14_115.csv  4_edge_critical_snarks.30.15_115.csv  4_edge_critical_snarks.30.16_115.csv  4_edge_critical_snarks.30.17_115.csv  4_edge_critical_snarks.30.18_115.csv  4_edge_critical_snarks.30.19_115.csv  4_edge_critical_snarks.30.1_115.csv  4_edge_critical_snarks.30.20_115.csv  4_edge_critical_snarks.30.21_115.csv  4_edge_critical_snarks.30.22_115.csv  4_edge_critical_snarks.30.23_115.csv  4_edge_critical_snarks.30.24_115.csv  4_edge_critical_snarks.30.25_115.csv  4_edge_critical_snarks.30.26_115.csv  4_edge_critical_snarks.30.27_115.csv  4_edge_critical_snarks.30.28_115.csv  4_edge_critical_snarks.30.2_115.csv  4_edge_critical_snarks.30.3_115.csv  4_edge_critical_snarks.30.4_115.csv  4_edge_critical_snarks.30.5_115.csv  4_edge_critical_snarks.30.6_115.csv  4_edge_critical_snarks.30.7_115.csv  4_edge_critical_snarks.30.8_115.csv  4_edge_critical_snarks.30.9_115.csv
include/: AdjacencyListGraph.h  CadicalSAT.h  ColoringSAT.h  Edge.h  EdgeList.h  Graph.h  IGraph.h  Matrix.h  PMSAT.h  Pipeline.h  SATInterface.h  logger.h
include/defect_search/: assignmentGeneration.h  defectComputing.h  structures.h  utilities.h
include/export/: exportPython.h
include/graph/: AdjacencyListGraph.h  Edge.h  EdgeList.h  Graph.h  GraphAlgorithms.h  IGraph.h
include/ilp/: DefectILP.h
include/perfect_matching/: PMSAT.h
include/sat/: CadicalSAT.h  ColoringSAT.h  DefectSAT.h  ISAT.h
src/: AdjacencyListGraph.cpp  CadicalSAT.cpp  ColoringSAT.cpp  EdgeList.cpp  Graph.cpp  IGraph.h  Matrix.cpp  PMSAT.cpp  PipeLine.cpp  logger.cpp  main.cpp
src/defect_search/: assignmentGeneration.cpp  defectComputing.cpp  utilities.cpp
src/export/: exportPython.cpp
src/graph/: AdjacencyListGraph.cpp  EdgeList.cpp  Graph.cpp  GraphAlgorithms.cpp
src/ilp/: DefectILP.cpp
src/perfect_matching/: PMSAT.cpp
src/sat/: CadicalSAT.cpp  ColoringSAT.cpp  DefectSAT.cpp  ISAT.cpp
tests/: test_compare_method_bf_ilp.cpp  test_graph_coloring.cpp  test_high_lpsolver.cpp  test_igraph.cpp
(+508 files in other folders)
